# c3po-model-server

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  Dockerfile.dev  Pipfile  README.md  api.py  docker-compose.yml  license  pylintrc  pyproject.toml  requirements.txt  transformers.openapi.yml
.github/workflows/: c3po-lint.yml  c3po-test.yml  ci.yml  cve-allowlist.txt  cve-scan.yml  main.yml  trufflehog.yml  type-checking.yml
app/: api.py  dependencies.py  experimental_features_router.py  initial_data.py  loggingConfig.py  logging_config.py  main.py
app/aimodels/: experimental_features_router.py  router.py
app/aimodels/bertopic/: experimental_features_router.py  prefix_router.py
app/aimodels/bertopic/ai_services/: basic_inference.py  topic_summarization.py  weak_learning.py
app/aimodels/bertopic/crud/: __init__.py  crud_bertopic_embedding_pretrained.py  crud_bertopic_trained.py  crud_bertopic_visualization.py  crud_document.py  crud_document_embedding_computation.py  crud_topic.py
app/aimodels/bertopic/models/: __init__.py  bertopic_embedding_pretrained.py  bertopic_trained.py  bertopic_visualization.py  document.py  document_bertopic_trained_model.py  document_embedding_computation.py  topic.py
app/aimodels/bertopic/routers/: bertopic_embedding_pretrained.py  documents.py  summarization.py  train.py
app/aimodels/bertopic/schemas/: __init__.py  bertopic_embedding_pretrained.py  bertopic_trained.py  bertopic_visualization.py  document.py  document_embedding_computation.py  topic.py
app/aimodels/gpt4all/: prefix_router.py
app/aimodels/gpt4all/ai_services/: basic_inference.py  completion_inference.py
app/aimodels/gpt4all/crud/: __init__.py  crud_gpt4all_pretrained.py  crud_llm_pretrained.py
app/aimodels/gpt4all/models/: __init__.py  gpt4all_pretrained.py  llm_pretrained.py
app/aimodels/gpt4all/routers/: completions.py  pretrained.py
app/aimodels/gpt4all/schemas/: __init__.py  gpt4all_pretrained.py
app/aimodels/lstm_stress_classifier/: prefix_router.py
app/aimodels/lstm_stress_classifier/routers/: upload.py
app/chat_queries/: router.py  service.py
app/chat_search/: multi_service_wip.py
app/chat_search/ai_services/: initialized_huggingface_embeddings.py  marco_rerank_retriever.py  service.py
app/chat_search/routers/: retrieval.py  template.html
app/core/: config.py  errors.py  logging.py  minio.py  model_cache.py  s3.py
app/core/env_var/: development.env  integration.env  local.env  production.env  staging.env  test.env
app/crud/: base.py
app/db/: base.py  base_class.py  init_db.py  session.py
app/mattermost/: mm_utils.py  router.py
app/mattermost/crud/: crud_mattermost.py
app/mattermost/models/: mattermost_channels.py  mattermost_documents.py  mattermost_users.py
app/mattermost/schemas/: mattermost_channels.py  mattermost_documents.py  mattermost_users.py
app/mattermost/services/: mattermost_utils.py
app/models/GPT_J_seq2seq/: model.py
app/models/LSTM/: inference.py  model.py  modelv2.py  training.py
app/models/LSTM_basic_classifier/: model.py
app/nitmre_nlp_utils/: preprocess.py
app/ppg_common/schemas/bertopic/: bertopic_embedding_pretrained.py  bertopic_trained.py  bertopic_visualization.py  document.py  document_embedding_computation.py  topic.py
app/ppg_common/schemas/gpt4all/: llm_pretrained.py
app/ppg_common/schemas/mattermost/: mattermost_channels.py  mattermost_documents.py  mattermost_users.py
app/ppg_common/services/: mattermost_utils.py
app/sentiments/: router.py
app/sentiments/insights/: prefix_router.py
app/sentiments/insights/routers/: get_chat_stress.py
app/settings/: logging_config.py  settings.py
app/settings/env_var/: local.env  production.env  staging.env
app/topics/: router.py
app/topics/insights/: prefix_router.py
app/topics/insights/routers/: data_open.json  team_trending.py
app/topics/insights/services/: trending_service.py
data_open/: vocab.json
hooks/: .pre-commit-hooks.yaml  output-requirements-txt.sh
models/LSTM/: model.py  training.py
models/Weak-Learning-Summarization/: .gitattributes  README.md  SPDX.spdx  environment.yml  generate_stories_stanfordtokenizer.py  requirements.txt  snorkel_compute_labels_languageagnostic.py  test_bertsum_output.py  test_summarizers.py  weak_summarizers.py
models/Weak-Learning-Summarization/BertSum-XLMRoberta/: README.md  notice.txt
models/Weak-Learning-Summarization/BertSum-XLMRoberta/src/: StanfordCoreNLP-arabic-noparse.properties  preprocess.py  train.py
models/Weak-Learning-Summarization/others/: logging.py  pyrouge.py  utils.py
models/Weak-Learning-Summarization/rouge_utils/: utils.py
ppg-common/: setup.py
ppg-common/ppg/: mattermost_utils.py
ppg-common/ppg/core/: config.py
ppg-common/ppg/schemas/bertopic/: bertopic_embedding_pretrained.py  bertopic_trained.py  bertopic_visualization.py  document.py  document_embedding_computation.py  topic.py
ppg-common/ppg/schemas/gpt4all/: gpt4all_pretrained.py  llm_pretrained.py
ppg-common/ppg/services/: mattermost_utils.py
sample_data/: __init__.py  chat_dataset_1.csv  chat_dataset_2.csv  chat_dataset_3.csv  chat_dataset_4.csv
scripts/: entrypoint.sh  init-development.sh  init-integration.sh  init-local.sh  init-production.sh  init-staging.sh  init.sh  prestart.sh
tests/: conftest.py  test_api.py  test_dependencies.py
tests/aimodels/bertopic/: notes.py
tests/chat_search/: test_retrieval.py
tests/crud/: test_base.py
tests/mattermost/: test_mattermost_crud.py  test_mattermost_router.py  test_mattermost_utils.py
tests/models/GPT_J_seq2seq/: test_model_gpt-j.py
tests/models/LSTM_basic_classifier/: test_model.py  test_model_lstm_basic.py
tests/nitmre_nlp_utils/: test_preprocess.py
tests/settings/: test_settings.py
tests/test_files/: test_ckpt_index  test_ckpt_metadata
tests/test_files/crud/: __init__.py  crud_test_api.py  crud_test_model.py  crud_test_schema.py
tests/test_files/db/: db_test_base.py  db_test_session.py
tests/test_files/mocks/: mock_completion_inference.py
(+46 files in other folders)
