[tool.poetry]
name = "c3po-model-server"
version = "0.1.0"
description = "An AI service for language-based models"
authors = ["Eric Robinson","Emilie Cowen","Mark Howard","Pat Kelly"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "~3.10"
urllib3 = "2.0.7"
fastapi = "0.115.6"
uvicorn = "^0.22.0"
pydantic = "2.7.4"
matplotlib = "^3.7.1"
pandas = "2.2.2"
httpx = "^0.24.1"
aiofiles = "^23.1.0"
clamd = "^1.0.2"
python-dotenv = "^1.0.0"
fastapi-versioning = "^0.10.0"
sqlalchemy = "^2.0.15"
psycopg2-binary = "^2.9.6"
hdbscan = "0.8.33"
python-multipart = "0.0.18"
minio = "^7.1.15"
bertopic = "0.14.1"
transformers = "4.38.1"
tensorflow = {version = "2.16.2", markers = "platform.machine == 'x86_64'"}
snorkel = "0.9.9"
gpt4all = "^1.0.7"
langchain = "0.3.13"
torch = "2.5.1"
numpy = "1.24.3"
scikit-learn = "1.5.0"
faiss-cpu = "^1.7.4"
rank-bm25 = "^0.2.2"
jinja2 = "3.1.4"
cython = "^0.29"
typing-extensions = "4.8.0"
werkzeug = "3.0.6"
glibc = "0.6.1"
pillow = "10.3.0"
aiohttp = "3.10.11"
fonttools = "4.49.0"
sentence-transformers = "2.3.0"
ctransformers = "0.2.27"
packaging = "23.2"
langsmith = "0.2.2"
scipy = "1.12.0"
requests = "2.32.3"
idna = "3.7"
nltk = "3.9.1"
setuptools = "70.0.0"
annotated-types = "0.7.0"
datamodel-code-generator = "0.25.6"
langchain-core = "0.3.27"
langchain-text-splitters = "0.3.3"
pydantic-settings = "2.4.0"
pydantic_core = "2.18.4"
starlette = "0.41.3"
sympy = "1.13.1"
h5py = "3.10.0"
keras = "3.0.0"
tensorboard = "2.16.0"
langchain-community = "^0.3.13"

[tool.poetry.group.test.dependencies]
pylint = "^2.17.4"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
fastapi-code-generator = "0.5.1"
pipdeptree = "^2.7.1"
openai = "^0.27.8"

[tool.coverage.run]
source = ["app"]
omit = ["__init__.py", "initial_data.py", "init_db.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
