[tool.poetry]
name = "c3po-model-server"
version = "0.1.0"
description = "An AI service for language-based models"
authors = ["Eric Robinson","Emilie Cowen","Mark Howard","Pat Kelly"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "~3.10"
urllib3 = "^2.5.0"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic = "^2.7.4"
matplotlib = "^3.7.1"
pandas = "^2.3.2"
clamd = "^1.0.2"
python-dotenv = "^1.0.0"
fastapi-versioning = "^0.10.0"
sqlalchemy = "^2.0.15"
psycopg2-binary = "^2.9.6"
hdbscan = "^0.8.40"
python-multipart = "^0.0.20"
bertopic = "^0.14.1"
snorkel = "^0.9.9"
gpt4all = "^2.8.2"
langchain = "^0.3.14"
torch = "^2.8.0"
numpy = "^1.26.4"
scikit-learn = "^1.7.1"
faiss-cpu = "^1.7.4"
rank-bm25 = "^0.2.2"
jinja2 = "^3.1.6"
cython = "^3.1.3"
typing-extensions = "^4.15.0"
werkzeug = "^3.1.3"
glibc = "^0.6.1"
pillow = "^11.3.0"
fonttools = "^4.59.2"
ctransformers = "^0.2.27"
packaging = "^24.0"
langsmith = "^0.2.2"
scipy = "^1.15.3"
requests = "^2.32.5"
idna = "^3.10"
nltk = "^3.9.1"
setuptools = "^80.9.0"
annotated-types = "^0.7.0"
datamodel-code-generator = "^0.25.6"
langchain-core = "^0.3.29"
langchain-text-splitters = "^0.3.3"
pydantic-settings = "^2.10.1"
pydantic_core = "^2.18.4"
h5py = "^3.14.0"
langchain-community = "^0.3.14"
virtualenv = "^20.34.0"
boto3 = "^1.37.37"
boto3-stubs = {extras = ["s3"], version = "^1.37.38"}
h11 = "^0.16.0"
aiofiles = "^24.1.0"
protobuf = "^4.21.0"
transformers = "^4.55.4"
sentence-transformers = "^5.1.0"
huggingface-hub = "^0.34.4"
tensorflow = "^2.19.1"
absl-py = "^2.3.1"
aiohttp = "^3.12.15"
aiosignal = "^1.4.0"
anyio = "^4.10.0"
botocore = "^1.40.19"
botocore-stubs = "^1.38.46"
certifi = "^2025.8.3"
charset-normalizer = "^3.4.3"
click = "^8.2.1"
contourpy = "^1.3.2"
distlib = "^0.4.0"
email-validator = "^2.3.0"
filelock = "^3.19.1"
frozenlist = "^1.7.0"
fsspec = "^2025.7.0"
grpcio = "^1.74.0"
httpx-sse = "^0.4.1"
joblib = "^1.5.2"
kiwisolver = "^1.4.9"
markdown = "^3.8.2"
markdown-it-py = "^4.0.0"
multidict = "^6.6.4"
mypy-boto3-s3 = "^1.40.0"
narwhals = "^2.17.0"
networkx = "^3.4.2"
orjson = "^3.11.3"
platformdirs = "^4.4.0"
plotly = "^6.5.2"
propcache = "^0.3.2"
pygments = "^2.19.2"
regex = "^2025.7.34"
rich = "^14.1.0"
rich-toolkit = "^0.15.0"
s3transfer = "^0.13.1"
sentencepiece = "^0.2.1"
types-awscrt = "^0.27.6"
types-s3transfer = "^0.13.0"
wrapt = "^1.17.3"
yarl = "^1.20.1"
starlette = "^0.47.3"
torchvision = "^0.23.0"
umap-learn = "^0.5.9.post2"
tf-keras = "^2.19.0"

[tool.poetry.group.test.dependencies]
pylint = "^2.17.4"
pytest = "^8.3.4"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
fastapi-code-generator = "^0.5.1"
pipdeptree = "^2.7.1"
openai = "^0.27.8"

[tool.coverage.run]
source = ["app"]
omit = ["__init__.py", "initial_data.py", "init_db.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
