[tool.poetry]
name = "c3po-model-server"
version = "0.1.0"
description = "An AI service for language-based models"
authors = ["Eric Robinson","Emilie Cowen","Mark Howard","Pat Kelly"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "~3.12"
urllib3 = "^2.6.3"
fastapi = "^0.135.1"
uvicorn = "^0.41.0"
pydantic = "^2.12.5"
matplotlib = "^3.10.8"
pandas = "^3.0.1"
clamd = "^1.0.2"
python-dotenv = "^1.2.2"
fastapi-versioning = "^0.10.0"
sqlalchemy = "^2.0.48"
psycopg2-binary = "^2.9.11"
hdbscan = "^0.8.41"
python-multipart = "^0.0.22"
bertopic = "^0.17.4"
snorkel = "^0.10.0"
gpt4all = "^2.8.2"
langchain = "^1.2.10"
torch = "^2.10.0"
numpy = "^2.4.3"
scikit-learn = "^1.8.0"
faiss-cpu = "^1.13.2"
rank-bm25 = "^0.2.2"
jinja2 = "^3.1.6"
cython = "^3.2.4"
typing-extensions = "^4.15.0"
werkzeug = "^3.1.6"
glibc = "^0.6.1"
pillow = "^12.1.1"
fonttools = "^4.62.0"
ctransformers = "^0.2.27"
packaging = "^26.0"
langsmith = "^0.7.14"
scipy = "^1.17.1"
requests = "^2.32.5"
idna = "^3.11"
nltk = "^3.9.3"
setuptools = "^82.0.1"
annotated-types = "^0.7.0"
datamodel-code-generator = "^0.30.1"
langchain-core = "^1.2.17"
langchain-text-splitters = "^1.1.1"
pydantic-settings = "^2.13.1"
pydantic_core = "^2.41.5"
h5py = "^3.14.0"
langchain-community = "^0.4.1"
virtualenv = "^21.1.0"
boto3 = "^1.42.63"
boto3-stubs = "^1.42.63"
h11 = "^0.16.0"
aiofiles = "^25.1.0"
protobuf = "^7.34.0"
transformers = "^5.3.0"
sentence-transformers = "^5.2.3"
huggingface-hub = "^1.6.0"
tensorflow = "^2.21.0"
absl-py = "^2.4.0"
aiohttp = "^3.13.3"
aiosignal = "^1.4.0"
anyio = "^4.12.1"
botocore = "^1.42.63"
botocore-stubs = "^1.42.41"
certifi = "^2026.2.25"
charset-normalizer = "^3.4.5"
click = "^8.3.1"
contourpy = "^1.3.3"
distlib = "^0.4.0"
email-validator = "^2.3.0"
filelock = "^3.25.0"
frozenlist = "^1.8.0"
fsspec = "^2026.2.0"
grpcio = "^1.78.0"
httpx-sse = "^0.4.3"
joblib = "^1.5.3"
kiwisolver = "^1.5.0"
markdown = "^3.10.2"
markdown-it-py = "^4.0.0"
multidict = "^6.7.1"
mypy-boto3-s3 = "^1.42.37"
narwhals = "^2.17.0"
networkx = "^3.6.1"
orjson = "^3.11.7"
platformdirs = "^4.9.4"
plotly = "^6.6.0"
propcache = "^0.4.1"
pygments = "^2.19.2"
regex = "^2026.2.28"
rich = "^14.3.3"
rich-toolkit = "^0.19.7"
s3transfer = "^0.16.0"
sentencepiece = "^0.2.1"
types-awscrt = "^0.31.3"
types-s3transfer = "^0.16.0"
wrapt = "^2.1.2"
yarl = "^1.23.0"
starlette = "^0.52.1"
torchvision = "^0.25.0"
umap-learn = "^0.5.11"
tf-keras = "^2.15.0"

[tool.poetry.group.test.dependencies]
pylint = "^4.0.5"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.15.1"
isort = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
fastapi-code-generator = "^0.5.4"
pipdeptree = "^2.31.0"
openai = "^2.26.0"

[tool.coverage.run]
source = ["app"]
omit = ["__init__.py", "initial_data.py", "init_db.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
